# game_bot

./: Readme.md
cpp/: .clang-format  CMakeLists.txt  main.cpp
cpp/include/: CMakeLists.txt
cpp/include/JSON/JSONHeaders/: JSONBase.h  JSONChildren.h  JSONParser.h
cpp/include/JSON/JSONSources/: JSONBase.cpp  JSONChildren.cpp  JSONParser.cpp
cpp/include/headers/: Character.h  Constants.h  Field.h  Game.h  JSON.h  Logger.h  Player.h  Server.h
cpp/include/sources/: Character.cpp  Field.cpp  Game.cpp  Logger.cpp  Player.cpp  Server.cpp
py/: bear.py  game.py  human.py  main.py  player.py  requirements.txt
